--- a/3-DivaConditionUse.tex
+++ b/3-DivaConditionUse.tex
@@ -18,12 +18,12 @@ In short, this means that everyone is free to use \diva and to redistribute it o
 If you want to integrate \diva into a closed-source software, or want to sell a modified closed-source version of \diva, please contact us in person. You can purchase a version of \diva under a different license, with \textit{no strings attached} (for example allowing you to take parts of \diva and integrate them into your own proprietary code).
 
 \vspace{.25cm}
-All SeaDataNet products (data and software) are freely distributed to the scientific community at the following conditions: 
+All SeaDataNet2 products (data and software) are freely distributed to the scientific community at the following conditions: 
 
 \begin{description}
 \item[\checkmark] The products should be used for scientific purposes only.
-\item[\checkmark] Articles, papers, or written scientific works of any form, based in whole or in part on data or software supplied by SeaDataNet, will contain a suitable acknowledgement to the SeaDataNet program of the European Union. Related publications (see bibliography) should also be cited.
-\item[\checkmark] The applications of SeaDataNet products are under the full responsibility of the users; neither the Commission of the European Communities nor the SeaDataNet partners shall be held responsible for any consequence resulting from the use of SeaDataNet products. 
+\item[\checkmark] Articles, papers, or written scientific works of any form, based in whole or in part on data or software supplied by SeaDataNet, will contain a suitable acknowledgement to the SeaDataNet2 program of the European Union. Related publications (see bibliography) should also be cited.
+\item[\checkmark] The applications of SeaDataNet2 products are under the full responsibility of the users; neither the Commission of the European Communities nor the SeaDataNet2 partners shall be held responsible for any consequence resulting from the use of SeaDataNet2 products. 
 \item[\checkmark] The recipient of these data will accept responsibility of informing all data users of these conditions.
 \end{description}
 
